chore: 루트파일 수정

--- a/src/View/index.html
+++ b/src/View/index.html
@@ -118,7 +118,8 @@
         </div>
       </section>
       <section class="teamIntroduction">
-        <h2 class="text-center">우리 팀을 소개합니다</h2>
+        
+        </div>
       </section>
     </div>
   </body>
