--- a/src/Css/index.css
+++ b/src/Css/index.css
@@ -1,10 +1,10 @@
 body {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .mainContainer {
-  margin-top: 80px;
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -14,7 +14,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 75%;
-  height: 100%;
-  margin-left: 25%;
+  width: 70%;
+  height: 90%;
+  margin-top: 5%;
+  margin-left: 30%;
 }
