--- a/src/Css/teamMembers.css
+++ b/src/Css/teamMembers.css
@@ -1,19 +1,24 @@
 .teamMembers {
-  display: flex;
-  flex-direction: column;
-  justify-content: first baseline;
+  margin-top: 80px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
   flex-wrap: wrap;
-  height: 100%;
+  height: 90%;
   width: 30%;
-  padding: 10px;
+  padding-left: 15px;
   position: fixed;
-  color: black;
+  padding-bottom: 30px;
   border-right: 3px solid skyblue;
+  color: black;
 }
 
 .member {
-  height: 250px;
-  width: 100%;
+  width: 80%;
+  height: 85%;
+  margin-right: 10px;
+  border-radius: 10px;
 }
 
 .teamMembers img {
