--- a/src/Css/index.css
+++ b/src/Css/index.css
@@ -1,21 +1,20 @@
 body {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .mainContainer {
-  margin-top: 20px;
+  margin-top: 100px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
   height: 100%;
 }
 .teamIntroduction {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 70%;
-  height: 90%;
-  margin-top: 5%;
-  margin-left: 30%;
+  width: 100%;
+  height: 500px;
+  border: 1px solid skyblue;
 }
