--- a/src/Css/index.css
+++ b/src/Css/index.css
@@ -14,7 +14,9 @@ body {
 }
 .teamIntroduction {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 500px;
+  height: 70%;
   border: 1px solid skyblue;
 }
