refactor: 루트파일 네비게이션 수정

--- a/src/View/index.html
+++ b/src/View/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="right">
         <a href="#home">Home</a>
-        <a href="#Add-member">멤버 추가 </a>
+        <button type="button" class="btn btn-outline-info">멤버 추가</button>
         <span> | </span>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="theme-toggle">
