--- a/src/View/index.html
+++ b/src/View/index.html
@@ -59,7 +59,9 @@
       </div>
       <div class="right">
         <a href="#home">Home</a>
-        <button type="button" class="btn btn-outline-info">멤버 추가</button>
+        <button type="button" id="addMemberbtn" class="btn btn-outline-info">
+          멤버 추가
+        </button>
         <span> | </span>
         <div class="theme-switch-wrapper">
           <label class="theme-switch" for="theme-toggle">
