feat: 네비게이션에 디데이 기능 구현

--- a/src/View/index.html
+++ b/src/View/index.html
@@ -51,11 +51,11 @@
   <body class="whiteTheme">
     <div class="navbar">
       <div class="left">
-        <div id="dday">D-Day: XX일</div>
+        <div id="dday">스파르타 종료 : <span id="days">XX</span></div>
         <div id="weather">날씨: 로딩중...</div>
       </div>
       <div class="center-title">
-        <h1>5조 팀소개 프로젝트</h1>
+        <h1>5 TEAM</h1>
       </div>
       <div class="right">
         <a href="#home">Home</a>
@@ -242,5 +242,6 @@
         </div>
       </section>
     </div>
+    <script src="../Js/dday.js"></script>
   </body>
 </html>
