--- a/src/View/index.html
+++ b/src/View/index.html
@@ -59,7 +59,7 @@
         <h1>5 TEAM</h1>
       </div>
       <div class="right">
-        <a href="#home">Home</a>
+        <a href="index.html">Home</a>
         <button type="button" id="addMemberbtn" class="btn btn-outline-info">
           멤버 추가
         </button>
