--- a/Css/index.css
+++ b/Css/index.css
@@ -20,3 +20,25 @@ body {
   height: 70%;
   border: 1px solid skyblue;
 }
+
+.addMember {
+  display: flex;
+  width: 500px;
+  height: 500px;
+  background-color: beige;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.mypostingbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 300px;
+  height: 250px;
+  margin: 30px auto;
+  border-radius: 5px;
+  border: 3px solid skyblue;
+  padding: 10px;
+  color: gray;
+}
