--- a/Css/index.css
+++ b/Css/index.css
@@ -31,7 +31,7 @@ body {
 }
 
 .mypostingbox {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-around;
   width: 300px;
