--- a/Css/teamMembers.css
+++ b/Css/teamMembers.css
@@ -3,7 +3,7 @@
   align-items: center;
   padding: 10px;
   margin: 10px 100px;
-  border: 1px solid skyblue;
+  border: thick double skyblue;
 }
 .teamMembers img {
   object-fit: cover;
