--- a/Css/personalPage.css
+++ b/Css/personalPage.css
@@ -8,6 +8,15 @@ body {
 .mainContainer {
   margin-top: 100px;
   display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.main {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
   width: 90%;
   height: 500px;
   border: 1px solid skyblue;
@@ -15,17 +24,20 @@ body {
   margin: 10px auto;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 그림자 효과 추가 */
   border-radius: 10px; /* 테두리 둥글게 */
-  background-color: #fff; /* 배경색 설정 */
 }
 
-.featurette-divider {
-  margin: 40px 0; /* 구분선 여백 조정 */
+.main > p {
+  font-size: 20px;
+  padding-left: 120px;
 }
-
 .profile {
   display: flex;
   align-items: center; /* 아이템들을 세로 중앙 정렬 */
-  gap: 20px; /* 사진과 정보 사이 간격 */
+  gap: 200px; /* 사진과 정보 사이 간격 */
+  width: 80%;
+  height: 280px;
+  padding-bottom: 30px;
+  margin: 30px auto;
 }
 
 .profile-picture {
@@ -35,8 +47,8 @@ body {
 }
 
 .profile-picture img {
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   object-fit: cover; /* 이미지 비율 유지하며 채우기 */
   border-radius: 50%;
   border: 3px solid skyblue; /* 사진 테두리 설정 */
@@ -49,6 +61,10 @@ body {
 .profile-info p {
   margin: 10px 0;
   font-size: 16px; /* 폰트 사이즈 조정 */
+}
+
+#infoDisplay {
+  margin-bottom: 50px;
 }
 
 #editForm,
