--- a/Css/personalPage.css
+++ b/Css/personalPage.css
@@ -10,71 +10,72 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: auto; /* 자동 높이 조정 */
 }
 
 .main {
-  margin-top: 100px;
   display: flex;
-  flex-direction: column;
+  margin-top: 100px;
   width: 90%;
-  height: 500px;
-  border: 1px solid skyblue;
-  padding: 50px; /* 내부 여백 추가 */
+  height: 480px;
+  padding: 50px;
   margin: 10px auto;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 그림자 효과 추가 */
-  border-radius: 10px; /* 테두리 둥글게 */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
-.main > p {
-  font-size: 20px;
-  padding-left: 120px;
-}
 .profile {
   display: flex;
-  align-items: center; /* 아이템들을 세로 중앙 정렬 */
-  gap: 200px; /* 사진과 정보 사이 간격 */
-  width: 80%;
-  height: 280px;
-  padding-bottom: 30px;
-  margin: 30px auto;
+  width: 100%;
+  gap: 180px;
 }
-
-.profile-picture {
-  flex: 1;
+.left-profile {
   display: flex;
-  justify-content: center; /* 사진을 중앙 정렬 */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 100px;
+  gap: 15px;
+}
+#name {
+  font-size: 40px;
 }
 
 .profile-picture img {
-  width: 400px;
-  height: 400px;
-  object-fit: cover; /* 이미지 비율 유지하며 채우기 */
+  width: 280px;
+  height: 280px;
+  object-fit: cover;
   border-radius: 50%;
-  border: 3px solid skyblue; /* 사진 테두리 설정 */
+  border: 3px solid skyblue;
 }
 
 .profile-info {
-  flex: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 20px;
+  padding-left: 40px;
+}
+#infoDisplay {
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .profile-info p {
   margin: 10px 0;
-  font-size: 16px; /* 폰트 사이즈 조정 */
+  font-size: 20px;
 }
 
-#infoDisplay {
-  margin-bottom: 50px;
-}
-
-#editForm,
-.profile-info {
-  width: 100%;
+.profile-info button {
+  margin-top: 10px;
+  width: 100px;
 }
 
 #editForm input,
 #editForm textarea,
 #editForm button {
-  width: 100%; /* 폼 요소들을 부모 너비에 맞게 조정 */
-  margin: 10px 0; /* 요소들 사이 간격 */
+  width: 60%; /* 폼 요소 너비 조정 */
+  margin: 7px; /* 요소 간 간격 */
 }
