--- a/Css/personalPage.css
+++ b/Css/personalPage.css
@@ -85,7 +85,7 @@ body {
   padding: 20px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  background-color: #f9f9f9;
+  background-color: transparent;
   width: 100%;
   height: 800px;
   display: flex;
@@ -99,7 +99,7 @@ body {
   background-color: whitesmoke; /* 어두운 칠판 배경 */
   border: 5px solid #6b6b6b; /* 칠판의 테두리를 나타내는 어두운 회색 테두리 */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* 칠판이 약간 떠있는 것처럼 보이게 하는 그림자 */
-  color: #d1d1d1; /* 밝은 회색 chalk-like 텍스트 컬러 */
+  color: gray; /* 밝은 회색 chalk-like 텍스트 컬러 */
   padding: 20px;
   overflow-y: auto; /* 내용이 넘칠 경우 스크롤 가능 */
   font-family: "Comic Sans MS", "Chalkboard", "Chalkduster", sans-serif; /* chalk-like 폰트 */
@@ -128,6 +128,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
+  background-color: transparent;
 }
 
 #guestName {
@@ -150,4 +151,21 @@ body {
   padding: 8px 10px; /* 버튼 내부 패딩 */
   font-size: 14px; /* 버튼 폰트 사이즈 */
   align-self: flex-end; /* 버튼을 오른쪽 정렬 */
+}
+
+.guestbook-entry {
+  display: flex;
+  width: 100%;
+}
+.guestbook-entry button {
+  margin-top: 2px;
+  margin-left: 10px;
+}
+
+.delete-guestbook-entry {
+  height: 22px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
