--- a/Css/index.css
+++ b/Css/index.css
@@ -1,43 +1,54 @@
-body {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+@import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Gothic&display=swap");
+
+* {
+  font-family: "Nanum Gothic", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+:root,
+:root.light {
+  --bg-color: white;
+  --text-color: #123;
+}
+
+:root.dark {
+  --bg-color: rgb(0, 0, 55);
+  --text-color: #ffffffe7;
 }
 
 .mainContainer {
-  margin-top: 100px;
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100%;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
-.teamIntroduction {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+.mainIntroduce {
   width: 100%;
-  height: 70%;
+  height: 100%;
+  padding-top: 150px;
+  text-align: center;
 }
 
-.addMember {
-  display: flex;
-  width: 500px;
-  height: 500px;
-  background-color: beige;
-  border: 1px solid black;
-  border-radius: 10px;
+.teamIntroduction {
+  width: 100%;
+  height: 100%;
+  padding-top: 150px;
+  padding-bottom: 150px;
+  text-align: center;
+  font-size: 18px;
+  line-height: 2.1;
 }
 
-.mypostingbox {
-  display: none;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 300px;
-  height: 250px;
-  margin: 30px auto;
-  border-radius: 5px;
-  border: 3px solid skyblue;
-  padding: 10px;
-  color: gray;
+[data-theme="light"] {
+  --bg-color: white;
+  --text-color: #123;
+}
+
+[data-theme="dark"] {
+  --bg-color: rgb(0, 0, 55);
+  --text-color: white;
 }
