--- a/Css/navbar.css
+++ b/Css/navbar.css
@@ -2,90 +2,80 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  background-color: #333;
-  color: white;
+  width: 100%;
+  background-color: white;
+  padding: 0 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
-  height: 80px;
-  width: 100%;
-  z-index: 1000;
+  z-index: 100;
+  transition: background-color 0.5s;
+}
+.navbar.scrolled {
+  background-color: #f0f0f0;
 }
 
-.navbar .center-title {
-  flex-grow: 1;
-  text-align: center;
-}
-
-.navbar .left,
-.navbar .right {
-  flex: 1;
+.left-container {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  gap: 10px;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 50px;
+  font-size: 15px;
+  width: 150px;
+  color: black;
 }
 
-.navbar a {
-  color: white;
-}
-
-.theme-switch-wrapper {
+.right-container {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  margin: 10px;
+  margin-right: 50px;
+  gap: 20px;
+  width: 150px;
+}
+
+.home,
+.toggle-container {
+  display: flex;
+  align-items: center;
+  margin-left: 50px;
 }
 
 .theme-switch {
   position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 50px;
+  height: 50px;
 }
 
-.theme-switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
+.theme-btn {
   position: absolute;
-  cursor: pointer;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: 0.4s;
-  border-radius: 34px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  transition: 0.4s;
+  width: 100%;
+  height: 100%;
+  padding: 0;
   border-radius: 50%;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
 }
 
-input:checked + .slider {
-  background-color: gray;
+.theme-btn img {
+  display: block;
+  margin: auto;
+  max-width: 35px;
+  max-height: 35px;
+  object-fit: cover;
 }
 
-input:checked + .slider:before {
-  transform: translateX(26px);
+.theme-btn img {
+  height: 100%;
+  display: block;
+  margin: auto;
+  width: 100%;
+  object-fit: cover;
 }
 
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
+.highlight {
+  color: green;
+  font-weight: bold;
 }
