--- a/Css/personalPage.css
+++ b/Css/personalPage.css
@@ -1,16 +1,39 @@
-body {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+@import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Nanum+Gothic&display=swap");
+
+* {
+  font-family: "Nanum Gothic", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+:root,
+:root.light {
+  --bg-color: white;
+  --text-color: #123;
+}
+
+:root.dark {
+  --bg-color: rgb(0, 0, 55);
+  --text-color: #ffffffe7;
 }
 
 .mainContainer {
-  margin-top: 100px;
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: auto; /* 자동 높이 조정 */
+  height: 100%;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+
+[data-theme="light"] {
+  --bg-color: white;
+  --text-color: #123;
+}
+
+[data-theme="dark"] {
+  --bg-color: rgb(0, 0, 55);
+  --text-color: white;
 }
 
 .main {
@@ -53,7 +76,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 20px;
+  margin-top: 40px;
   padding-left: 40px;
 }
 #infoDisplay {
@@ -73,11 +96,15 @@ body {
   width: 100px;
 }
 
+#editForm {
+  margin-top: 35px;
+}
+
 #editForm input,
 #editForm textarea,
 #editForm button {
   width: 60%; /* 폼 요소 너비 조정 */
-  margin: 7px; /* 요소 간 간격 */
+  margin: 10px; /* 요소 간 간격 */
 }
 
 .guestbook-container {
