--- a/css/personalPage.css
+++ b/css/personalPage.css
@@ -195,4 +195,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: transparent;
+}
+
+.like-button {
+  height: 22px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 2px;
 }
