--- a/css/personalPage.css
+++ b/css/personalPage.css
@@ -206,3 +206,10 @@
   align-items: center;
   margin-right: 2px;
 }
+
+.guestbook-timestamp {
+  font-size: 10px;
+  padding-top: 5px;
+  margin-left: 5px;
+  opacity: 0.5;
+}
